Corrected Header Border-Radius on Mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,6 +160,7 @@ body {
     header h1 {
       width: 100%;
       text-align: center;
+      border-radius: 0;
     }
   
     header nav ul {
